--- a/src/Frontend/adi.ch.dev.poa.ui/src/index.html
+++ b/src/Frontend/adi.ch.dev.poa.ui/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <mov-root></mov-root>
+  <poa-root></poa-root>
 </body>
 </html>
